--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-*.jar filter=lfs diff=lfs merge=lfs -text
+jdk-16.0.1_windows-x64_bin.exe filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
+*.jar filter=lfs diff=lfs merge=lfs -text
